--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -311,44 +311,22 @@
 </nav>
 -->
 <!-- Sidebar-->
-<!--<nav class="navbar navbar-dark navbar-expand-md jh-navbar">-->
+<!--
+<nav class="navbar navbar-dark navbar-expand-md jh-navbar">
     <aside  id="fh5co-aside" role="complementary" class="border js-fullheight">
         <a href="/"> <h1 id="fh5co-logo"><img src="../../../content/images/logo.png" height="60" width="60"/></h1></a>
         <nav id="fh5co-main-menu" role="navigation">
             <ul>
-                <li class="fh5co">
-                    <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;
-                        <span>Tendencias</span>
-                    </a>
-                </li>
-                <li class="fh5co">
-                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
-                        <span>CANCIONES</span>
-                    </a>
-                </li>
-                <li class="fh5co">
-                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
-                        <span>ARTISTAS</span>
-                    </a>
-                </li>
-                <li class="fh5co">
-                    <a routerLink="settings" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-cog" aria-hidden="true"></i>&nbsp;
-                        <span>AJUSTES</span>
-                    </a>
-                </li>
 
-                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> <span> ACCEDE </span></a>
+
+                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> <span> Sign in </span></a>
 
                 </li>
 
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p style="color:black!important;margin-top: 281px!important;"><small>&copy; 2018 <b style="color:white!important">PuigTheSong.<br></b> All Rights Reserved.<br><p style="color:black!important;">Designed by <a href="" target="_blank" style="color:white!important;"><br>Julio/Borja/Bryan/Javier<br>Llauna</a></p>
+            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -357,4 +335,122 @@
             </ul>
         </div>
     </aside>
-<!--</nav>-->
+</nav>
+-->
+
+
+<!-- Sidebar-->
+
+<!--
+<div  id="fh5co-aside" role="complementary" class="border js-fullheight">
+    <a href="">PuigTheSong</a>
+    <nav id="fh5co-main-menu" role="navigation">
+        <ul>
+            <li *jhiHasAnyAuthority="'ROLE_USER'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            </li>
+            <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            </li>
+            <li class="fh5co">
+                <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <i class="" aria-hidden="true"></i>&nbsp;
+                    <span>Tendencias</span>
+                </a>
+            </li>
+            <li class="fh5co">
+                <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <i class="" aria-hidden="true"></i>&nbsp;
+                    <span>CANCIONES</span>
+                </a>
+            </li>
+            <li class="fh5co">
+                <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <i class="" aria-hidden="true"></i>&nbsp;
+                    <span>ARTISTAS</span>
+                </a>
+            </li>
+            <li class="fh5co">
+                <a routerLink="settings" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <i class="" aria-hidden="true"></i>&nbsp;
+                    <span>AJUSTES</span>
+                </a>
+            </li>
+
+            <li class="fh5co"><a (click)="login()" id="login"><i class="" aria-hidden="true"></i> <span> ACCEDE </span></a>
+
+            </li>
+
+        </ul>
+    </nav>
+    <div class="fh5co-footer">
+
+    </div>
+</div>
+-->
+<div id="fh5co-page">
+    <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle">
+        <i></i>
+    </a>
+    <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+
+        <h1 id="fh5co-logo" class="mx-2">
+            <a href="index.html">PuigTheSong</a>
+        </h1>
+        <nav id="fh5co-main-menu" role="navigation">
+            <ul>
+                <!-- <li class="fh5co-active"><i class="icon-home"></i><a href="index.html">Home</a></li> -->
+                <li>
+                    <a href="index.html">
+                        <i class=""></i>Home</a>
+                </li>
+                <li>
+                    <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="" aria-hidden="true"></i>&nbsp;
+                        <span>Tendencias</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#caracteristicas">
+                        <i class="icon-info"></i> Características </a>
+                </li>
+                <li>
+                    <a href="#login">
+                        <i class="icon-user2"></i> Login </a>
+                </li>
+                <!-- <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li> -->
+            </ul>
+        </nav>
+
+        <div class="fh5co-footer">
+            <p>
+                <small>Desarrollado por los Llaunes
+                    <hr>(Julio, Bryan, Borja, David y Javi)</span>
+                </small>
+            </p>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="icon-facebook2"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="icon-twitter2"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="icon-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="icon-linkedin2"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </aside>
+</div>
