--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -27,7 +27,7 @@
 
 
         <div class="col-md-4">
-            <p class="texto">REGISTRO</p>
+            <p class="texto" [ngStyle]="{'display':displayRegistre}">REGISTRO</p>
 
             <form name="form" role="form" (ngSubmit)="register()" #registerForm="ngForm" *ngIf="!success">
                 <div class="form-group Registro">
