--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,5 +1,5 @@
 <p>
-<div class="col-md-12" id="top" style="text-align: center" [ngStyle]="{'display':displayTitle}"><h1 class="top"><i class="fa fa-globe fa-lg"> </i> TOP PAÏSES</h1></div>
+<div class="col-md-12" id="top" style="text-align: center" [ngStyle]="{'display':displayTitle}"><h1 class="top"><i class="fa fa-globe fa-lg"> </i> TOP PAISES</h1></div>
 </p>
 <div [ngStyle]="{'display':displayCountry}">
     <div class="picture-grid">
@@ -122,6 +122,7 @@
     <jhi-alert-error></jhi-alert-error>
     <div class="fondo" [ngStyle]="{'display':displayMain}">
         <!-- Page Content Holder -->
+
         <div class="row">
                 <div class="col-sm-12 buscador">
                     <br>
@@ -134,7 +135,7 @@
             <!--
                <div class="row">
                 <div class="col-lg-10" style="text-align: center"><h1 [ngStyle]="{'display':displayMain}"><span class="glyphicon glyphicon-search"></span> Búsquedas</h1></div>
-                </div>-->
+                </div> -->
                 <div class="row">
                     <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6 cols-xs-8">
                         <div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
@@ -212,9 +213,8 @@
                     <div class="col-md-12" style="text-align: center"><h2><span class="glyphicon glyphicon-star"></span> Top Artistas</h2></div>
                 </div><br>
                 <div class="row" >
-
-                    <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg mas"> Ver más</button>
-                    </div>
+                    <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg mas"> Ver más</button></div>
+                </div><br>
             </div>
         </div>
 </div>
