--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -398,7 +398,7 @@
                     <a routerLink="/" routerLinkActive="active">Home</a>
                 </li>
                 <li>
-                    <a routerLink="pagehome-phome" routerLinkActive="active">Tendencias</a>
+                    <a routerLink="pageregister-pages" routerLinkActive="active">PuigTheSong Tour</a>
                 </li>
                 <li>
                     <a href="#caracteristicas">Características</a>
@@ -406,7 +406,8 @@
                 <li *ngSwitchCase="true">
                     <a routerLink="pagesong-pages" routerLinkActive="active">Artistas</a>
                 </li>
-                <li *ngSwitchCase="true"><a routerLink="pageartist-pages" routerLinkActive="active">Canciones</a>
+                <li *ngSwitchCase="true">
+                    <a routerLink="pageartist-pages" routerLinkActive="active">Canciones</a>
                 </li>
                 <li *ngSwitchCase="true">
                     <a (click)="logout()" id="logout">Sign out</a>
